--- a/Bierman.ViewModel/Bierman.ViewModel.csproj
+++ b/Bierman.ViewModel/Bierman.ViewModel.csproj
@@ -1,14 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
+	<UseWPF>true</UseWPF>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Bierman.Model\Bierman.Model.csproj" />
